--- a/Hamzabaloch/index.html
+++ b/Hamzabaloch/index.html
@@ -4,14 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaquery.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
 
+    <header>
+        <nav>
+            <div class="nav-content">
+                <h1>Flipkart</h1>
+                <ul>
+                    <li class="nav-items">About</li>
+                    <li class="nav-items">categories</li>
+                    <li class="nav-items">Blog</li>
+                    <li class="nav-items">Contect</li>
+                    <img src="./images/Hamburger_icon.svg.png" alt="Hamburger_icon">
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/hall-furniture-design-with-sofa-set.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/hall-furniture-design-with-sofa-set.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/hall-furniture-design-with-sofa-set.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div class="cards">
+                <img src="./images/hall-furniture-design-with-sofa-set.jpg" alt="">
+                <img src="./images/hall-furniture-design-with-sofa-set.jpg" alt="">
+                <img src="./images/hall-furniture-design-with-sofa-set.jpg" alt="">
+                <img src="./images/hall-furniture-design-with-sofa-set.jpg" alt="">
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="sec1">
+                <h1>Flipkart</h1>
+                <p>Our vision is to provide convenience <br>
+                    and help increase your sales business.</p>
+            </div>
+            <div class="sec2">
+                <ul>
+                    <h2>about</h2>
+                    <li>How it works</li>
+                    <li>Featured</li>
+                    <li>Partnership</li>
+                    <li>Business Relations</li>
+                </ul>
+                <ul>
+                    <h2>community</h2>
+                    <li>Events</li>
+                    <li>Podcast</li>
+                    <li>Blog</li>
+                    <li>Invite a friend</li>
+                </ul>
+                <ul>
+                    <h2>socials</h2>
+                    <li>Discord</li>
+                    <li>Instagram</li>
+                    <li>Twitter</li>
+                    <li>Facebook</li>
+                </ul>
+            </div>
+        </div>
+        <div class="sec3">
+            <h1>
+                ©2022. All rights reserved
+            </h1>
+            <h1>
+                Privacy Policy <span>Terms and conditions</span>
+            </h1>
+        </div>
+    </footer>
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
